src/test/ui/suggestions/suggest-ref-macro.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-ref-macro.rs:15:11
   |
LL |         x(123);
   |           ^^^
   |           |
   |           expected `&mut i32`, found integer
   |           help: consider mutably borrowing here: `&mut 123`
...
LL |     bla!();
   |     ------- in this macro invocation
   |
   = note: this error originates in the macro `bla` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/suggest-ref-macro.rs:26:10
   |
LL |     bla!(456);
   |          ^^^
   |          |
   |          expected `&mut i32`, found integer
   |          help: consider mutably borrowing here: `&mut 456`

error[E0308]: mismatched types
  --> $DIR/suggest-ref-macro.rs:8:1
   |
LL | #[hello]
   | ^^^^^^^^ expected `&mut i32`, found integer
   |
   = note: this error originates in the attribute macro `hello` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
